--- a/spek_konduktor/sk_as.html
+++ b/spek_konduktor/sk_as.html
@@ -400,8 +400,8 @@ body.dark-mode h4.title {
     <div class="info-text" id="infoText">
       </div>
 <div class="text-center mt-4">
-  <a href="..//spek konduktor/sk_index.html" class="nav-btn">Kembali</a>
-  <a href="..//index.html" class="nav-btn">Halaman Utama</a>
+  <a href="sk_index.html" class="nav-btn">Kembali</a>
+  <a href="index.html" class="nav-btn">Halaman Utama</a>
   <button class="nav-btn" id="toggleDark">Dark</button>
 </div>
     <div class="footer mt-4">
