--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         </a>
       </div>
       <div class="col">
-        <a href="..//Fix/spek konduktor/sk_index.html" class="project-button btn-custom-2">
+        <a href="..//spek_kondutor/sk_index.html" class="project-button btn-custom-2">
           <i class="fas fa-bolt"></i><span>Spesifikasi Konduktor</span>
         </a>
       </div>
