--- a/index.html
+++ b/index.html
@@ -280,12 +280,12 @@
     <hr class="custom-hr" />
     <div class="row row-cols-2 g-3">
       <div class="col">
-        <a href="..//On Github/kalkulator hambatan konduktor/hk_index.html" class="project-button btn-custom-1">
+        <a href="kalkulator_hambatan_konduktor/hk_index.html" class="project-button btn-custom-1">
           <i class="fas fa-calculator"></i><span>Hambatan Konduktor</span>
         </a>
       </div>
       <div class="col">
-        <a href="..//spek_kondutor/sk_index.html" class="project-button btn-custom-2">
+        <a href="spek_konduktor/sk_index.html" class="project-button btn-custom-2">
           <i class="fas fa-bolt"></i><span>Spesifikasi Konduktor</span>
         </a>
       </div>
