--- a/spek_konduktor/sk_as.html
+++ b/spek_konduktor/sk_as.html
@@ -401,7 +401,7 @@ body.dark-mode h4.title {
       </div>
 <div class="text-center mt-4">
   <a href="sk_index.html" class="nav-btn">Kembali</a>
-  <a href="index.html" class="nav-btn">Halaman Utama</a>
+  <a href="..//index.html" class="nav-btn">Halaman Utama</a>
   <button class="nav-btn" id="toggleDark">Dark</button>
 </div>
     <div class="footer mt-4">
