--- a/spek_konduktor/sk_icea.html
+++ b/spek_konduktor/sk_icea.html
@@ -336,7 +336,7 @@
     <div class="info-text" id="infoText">
       </div>
 <div class="text-center mt-4">
-  <a href="..//spek konduktor/sk_index.html" class="nav-btn">Kembali</a>
+  <a href="sk_index.html" class="nav-btn">Kembali</a>
   <a href="..//index.html" class="nav-btn">Halaman Utama</a>
   <button class="nav-btn" id="toggleDark">Dark</button>
 </div>
