--- a/spek_konduktor/sk_iec.html
+++ b/spek_konduktor/sk_iec.html
@@ -302,7 +302,7 @@ body.dark-mode h4.title {
       adalah: <span class="info-detail">36,0</span> <span class="satuan-ohm">Ω/km</span>
     </div>
 <div class="text-center mt-4">
-  <a href="..//spek konduktor/sk_index.html" class="nav-btn">Kembali</a>
+  <a href="sk_index.html" class="nav-btn">Kembali</a>
   <a href="..//index.html" class="nav-btn">Halaman Utama</a>
   <button class="nav-btn" id="toggleDark">Dark</button>
 </div>
