--- a/spek_konduktor/sk_index.html
+++ b/spek_konduktor/sk_index.html
@@ -302,19 +302,19 @@
     <div class="container">
         <h1>Spesifikasi Hambatan Konduktor</h1>
         <hr> <div class="button-grid">
-            <a href="..//spek konduktor/sk_iec.html" class="button button-iec">
+            <a href="sk_iec.html" class="button button-iec">
                 <img src="..//icon/logo_iec.png" alt="IEC Logo" class="button-icon-png">
                 <span>IEC</span>
             </a>
-            <a href="..//spek konduktor/sk_icea.html" class="button button-icea">
+            <a href="sk_icea.html" class="button button-icea">
                 <img src="..//icon/logo_icea.png" alt="ICEA Logo" class="button-icon-png">
                 <span>ICEA</span>
             </a>
-            <a href="..//spek konduktor/sk_spln.html" class="button button-spln">
+            <a href="sk_spln.html" class="button button-spln">
                 <img src="..//icon/logo_spln.png" alt="SPLN Logo" class="button-icon-png">
                 <span>SPLN</span>
             </a>
-            <a href="..//spek konduktor/sk_as.html" class="button button-asnzs">
+            <a href="sk_as.html" class="button button-asnzs">
                 <img src="..//icon/logo_as.png" alt="AS/NZS Logo" class="button-icon-png">
                 <span>AS/NZS</span>
             </a>
