--- a/spek_konduktor/sk_spln.html
+++ b/spek_konduktor/sk_spln.html
@@ -331,7 +331,7 @@ body.dark-mode h4.title {
       Spesifikasi SPLN AAAC <span class="info-detail">16 mm²</span> adalah: <span class="info-detail">1,955</span> <span class="satuan-ohm">Ω/km</span>
     </div>
 <div class="text-center mt-4">
-  <a href="..//spek konduktor/sk_index.html" class="nav-btn">Kembali</a>
+  <a href="sk_index.html" class="nav-btn">Kembali</a>
   <a href="..//index.html" class="nav-btn">Halaman Utama</a>
   <button class="nav-btn" id="toggleDark">Dark</button>
 </div>
