update fungsi tools

--- a/index.html
+++ b/index.html
@@ -290,23 +290,23 @@
         </a>
       </div>
       <div class="col">
-        <a href="..//Fix/faktor koreksi suhu/fk_iec.html" class="project-button btn-custom-3">
+        <a href="faktor koreksi suhu/fk_index.html" class="project-button btn-custom-3">
           <i class="fas fa-thermometer-half"></i><span>Faktor Koreksi Suhu</span>
         </a>
       </div>
       <div class="col">
-        <a href="../Fix/other/hitung_panjangkabel.html" class="project-button btn-custom-4">
+        <a href="..//mypro/lainnya/hitung_panjangkabel.html" class="project-button btn-custom-4">
           <i class="fas fa-ruler"></i><span>Hitung Panjang kabel</span>
         </a>
       </div>
       <div class="col">
-        <a href="..//Fix/other/konverter_hambatan.html" class="project-button btn-custom-5">
-          <i class="fas fa-code"></i><span>Eksperimen</span>
+        <a href="..//mypro/lainnya/konverter_hambatan.html" class="project-button btn-custom-5">
+          <i class="fas fa-code"></i><span>Koverter Hambatan</span>
         </a>
       </div>
       <div class="col">
-        <a href="..//Fix/other/konverter_panjang.html" class="project-button btn-custom-6">
-          <i class="fas fa-flask"></i><span>Pengembangan</span>
+        <a href="..//mypro/lainnya/konverter_panjang.html" class="project-button btn-custom-6">
+          <i class="fas fa-flask"></i><span>Konverter Panjang</span>
         </a>
       </div>
     </div>
@@ -314,12 +314,12 @@
     <!-- Hidden projects: always in 2 columns, with the same gutter as main grid -->
     <div class="row row-cols-2 g-3 hidden-projects-row hidden-projects" id="hiddenProjects">
       <div class="col">
-        <a href="404.html" class="project-button btn-custom-7">
+        <a href="..//mypro/lainnya/404.html" class="project-button btn-custom-7">
           <i class="fas fa-robot"></i><span>Tools Lainnya 1</span>
         </a>
       </div>
       <div class="col">
-        <a href="404.html" class="project-button btn-custom-8">
+        <a href="..//mypro/lainnya/404.html" class="project-button btn-custom-8">
           <i class="fas fa-desktop"></i><span>Tools Lainnya 2</span>
         </a>
       </div>
