--- a/index.html
+++ b/index.html
@@ -301,12 +301,12 @@
       </div>
       <div class="col">
         <a href="..//mypro/lainnya/konverter_hambatan.html" class="project-button btn-custom-5">
-          <i class="fas fa-code"></i><span>Koverter Hambatan</span>
+          <i class="fas fa-code"></i><span>Koversi Hambatan</span>
         </a>
       </div>
       <div class="col">
         <a href="..//mypro/lainnya/konverter_panjang.html" class="project-button btn-custom-6">
-          <i class="fas fa-flask"></i><span>Konverter Panjang</span>
+          <i class="fas fa-flask"></i><span>Konversi Panjang</span>
         </a>
       </div>
     </div>
