--- a/index.html
+++ b/index.html
@@ -295,17 +295,17 @@
         </a>
       </div>
       <div class="col">
-        <a href="..//mypro/hitung_panjang_kabel/index.html" class="project-button btn-custom-5">
+        <a href="./lainnya/hitung_panjang_kabel.html" class="project-button btn-custom-5">
           <i class="fas fa-ruler"></i><span>Hitung Panjang kabel</span>
         </a>
       </div>
       <div class="col">
-        <a href="..//mypro/lainnya/konverter_hambatan.html" class="project-button btn-custom-5">
+        <a href="./lainnya/konverter_hambatan.html" class="project-button btn-custom-5">
           <i class="fas fa-code"></i><span>Koversi Hambatan</span>
         </a>
       </div>
       <div class="col">
-        <a href="..//mypro/hitung_panjang_kabel/hpk_index.html" class="project-button btn-custom-6">
+        <a href="./lainnya/konverter_panjang.html" class="project-button btn-custom-6">
           <i class="fas fa-flask"></i><span>Konversi Panjang</span>
         </a>
       </div>
@@ -314,12 +314,12 @@
     <!-- Hidden projects: always in 2 columns, with the same gutter as main grid -->
     <div class="row row-cols-2 g-3 hidden-projects-row hidden-projects" id="hiddenProjects">
       <div class="col">
-        <a href="..//mypro/lainnya/404.html" class="project-button btn-custom-7">
+        <a href="./lainnya/404.html" class="project-button btn-custom-7">
           <i class="fas fa-robot"></i><span>Tools Lainnya 1</span>
         </a>
       </div>
       <div class="col">
-        <a href="..//mypro/lainnya/404.html" class="project-button btn-custom-8">
+        <a href="./lainnya/404.html" class="project-button btn-custom-8">
           <i class="fas fa-desktop"></i><span>Tools Lainnya 2</span>
         </a>
       </div>
