--- a/lainnya/404.html
+++ b/lainnya/404.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>404 | Halaman Tidak Ada</title>
-  <link rel="icon" type="image/png" href="icon.png" />
+  <link rel="icon" type="image/png" href="../icon/logo.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
   <style>
     body {
@@ -131,16 +131,16 @@
 </head>
 <body>
   <div class="container-404">
-    <img src="https://cdn.pixabay.com/photo/2013/07/13/12/19/cable-146184_960_720.png" alt="Broken Cable" class="bg-broken-cable" loading="lazy">
+    <img src="..//icon/danger_hv.png" alt="Broken Cable" class="bg-broken-cable" loading="lazy">
     <div class="emoji">🔌</div>
     <div class="big-404">404</div>
-    <div class="broken-link"><i class="fas fa-unlink"></i> Project Tidak Ada</div>
+    <div class="broken-link"><i class="fas fa-unlink"></i> Project Belum Tersedia</div>
     <div class="desc-404">
       Sepertinya kamu menjelajah ke project yang belum tersedia.<br>
       Kabelnya belum terhubung!<br>
       <span style="font-size:0.97em; color:#fdcb6e;">Coba kembali ke beranda, atau pilih project yang sudah ada.</span>
     </div>
-    <a href="index.html" class="back-btn"><i class="fas fa-arrow-left"></i> Kembali ke Beranda</a>
+    <a href="..//index.html" class="back-btn"><i class="fas fa-arrow-left"></i> Kembali ke Beranda</a>
   </div>
   <div class="footer-404">
     Made by Williyanto Adi 2025
