update nama header

--- a/kalkulator_hambatan_konduktor/hk_icea.html
+++ b/kalkulator_hambatan_konduktor/hk_icea.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Kalkulator Hambatan Konduktor ICEA v7</title>
+  <title>Kalkulator Hambatan Konduktor ICEA</title>
   <link rel="icon" type="image/png" href="logo_icea.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
   <style>
@@ -350,7 +350,7 @@
 </head>
 <body>
   <div class="container-main">
-    <div class="title-main">Kalkulator Hambatan Konduktor ICEA v7</div>
+    <div class="title-main">Kalkulator Hambatan Konduktor ICEA</div>
     <div class="divider"></div>
 
     <div class="form-row">
