--- a/spek_konduktor/sk_as.html
+++ b/spek_konduktor/sk_as.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Konduktor Resistansi AS/NZS</title>
+  <title>Spesifikasi Hambatan Konduktor AS/NZS</title>
   <link rel="icon" type="image/png" href="logo_as.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
@@ -322,7 +322,7 @@ body.dark-mode h4.title {
 </head>
 <body>
   <div class="card-box bg-white">
-    <h4 class="title">Konduktor Resistansi AS/NZS</h4>
+    <h4 class="title">Spesifikasi Hambatan Konduktor AS/NZS</h4>
     <div class="text-center mb-4">
       <div class="leaf-btn-group dropdown">
         <button class="leaf-btn dropdown-toggle active" type="button" id="btnCU" data-bs-toggle="dropdown" aria-expanded="false">
