--- a/faktor koreksi suhu/fk_spln.html
+++ b/faktor koreksi suhu/fk_spln.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Converter Faktor Koreksi Suhu SPLN AAAC/AAAC-S</title>
+    <title>Faktor Koreksi Suhu SPLN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -102,7 +102,7 @@
     <div class="container-center">
         <div class="main-card">
             <div class="main-title">
-                Converter Faktor Koreksi Suhu SPLN<br>
+                Faktor Koreksi Suhu SPLN<br>
                 <span style="font-size:0.93em;">(AAAC/AAAC-S)</span>
             </div>
             <form autocomplete="off">
