--- a/spek_konduktor/sk_icea.html
+++ b/spek_konduktor/sk_icea.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Konduktor Resistansi ICEA</title>
+  <title>Spesifikasi Hambatan Konduktor ICEA</title>
   <link rel="icon" type="image/png" href="logo_icea.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -273,7 +273,7 @@
 </head>
 <body>
   <div class="card-box bg-white">
-    <h4 class="title">Konduktor Resistansi ICEA</h4>
+    <h4 class="title">Spesifikasi Hambatan Konduktor ICEA</h4>
     <div class="text-center mb-4">
       <button class="leaf-btn me-2 active" id="btnCU">CU</button>
       <button class="leaf-btn me-2" id="btnAL">AL</button>
