--- a/spek_konduktor/sk_iec.html
+++ b/spek_konduktor/sk_iec.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Konduktor Resistansi IEC</title>
+  <title>Spesifikasi Hambatan Konduktor IEC</title>
   <link rel="icon" type="image/png" href="logo_iec.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -246,7 +246,7 @@ body.dark-mode h4.title {
 </head>
 <body>
   <div class="card-box bg-white">
-    <h4 class="title">Konduktor Resistansi IEC</h4>
+    <h4 class="title">Spesifikasi Hambatan Konduktor IEC</h4>
     <div class="text-center mb-4">
       <button class="leaf-btn me-2 active" id="btnCU">CU</button>
       <button class="leaf-btn me-2" id="btnAL">AL</button>
