--- a/spek_konduktor/sk_spln.html
+++ b/spek_konduktor/sk_spln.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Konduktor Resistansi SPLN</title>
+  <title>Spesifikasi Hambatan Konduktor SPLN</title>
   <link rel="icon" type="image/png" href="logo_spln.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -249,7 +249,7 @@ body.dark-mode h4.title {
 </head>
 <body>
   <div class="card-box bg-white">
-    <h4 class="title">Konduktor Resistansi SPLN</h4>
+    <h4 class="title">Spesifikasi Hambatan Konduktor SPLN</h4>
     <div class="text-center mb-4">
       <button class="leaf-btn me-2 active" id="btnAAAC">AAAC</button>
       <button class="leaf-btn me-2" id="btnACSR">ACSR</button>
