--- a/kalkulator_hambatan_konduktor/hk_icea.html
+++ b/kalkulator_hambatan_konduktor/hk_icea.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Kalkulator Hambatan Konduktor ICEA</title>
-  <link rel="icon" type="image/png" href="logo_icea.png">
+  <link rel="icon" type="image/png" href="../icon/logo_icea.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
   <style>
     :root {
