--- a/lainnya/hitung_panjang_kabel.html
+++ b/lainnya/hitung_panjang_kabel.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perhitungan Panjang Kabel dalam Drum</title>
+    <link rel="icon" type="image/png" href="..//icon/danger_hv.png" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
