--- a/lainnya/konverter_panjang.html
+++ b/lainnya/konverter_panjang.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Konverter Panjang</title>
+  <link rel="icon" type="image/png" href="..//icon/danger_hv.png" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
 body {
@@ -293,8 +294,8 @@ body.dark-mode h4.title {
       <div class="info-extra" id="infoExtraLength"></div>
     </div>
     <div class="text-center mt-4">
-      <a href="https://youtube.com" target class="nav-btn">Home</a>
-      <a href="https://google.com" target class="nav-btn">Home Page</a>
+      <a href="..//lainnya/konverter_panjang.html" target class="nav-btn">Home</a>
+      <a href="..//index.html" target class="nav-btn">Home Page</a>
       <button class="nav-btn" id="toggleDark">Dark</button>
     </div>
     <div class="footer mt-4">
