--- a/spek_konduktor/sk_as.html
+++ b/spek_konduktor/sk_as.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Spesifikasi Hambatan Konduktor AS/NZS</title>
-  <link rel="icon" type="image/png" href="logo_as.png">
+  <link rel="icon" type="image/png" href="..//icon/logo_as.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
 /* Styling for the resistance input field */
