--- a/spek_konduktor/sk_iec.html
+++ b/spek_konduktor/sk_iec.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Spesifikasi Hambatan Konduktor IEC</title>
-  <link rel="icon" type="image/png" href="logo_iec.png">
+  <link rel="icon" type="image/png" href="..//icon/logo_iec.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
