--- a/spek_konduktor/sk_spln.html
+++ b/spek_konduktor/sk_spln.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Spesifikasi Hambatan Konduktor SPLN</title>
-  <link rel="icon" type="image/png" href="logo_spln.png">
+  <link rel="icon" type="image/png" href="..//icon/logo_spln.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
