--- a/faktor koreksi suhu/fk_index.html
+++ b/faktor koreksi suhu/fk_index.html
@@ -304,19 +304,19 @@
         <hr> <div class="button-grid">
             <a href="fk_iec.html" class="button button-iec">
                 <img src="..//icon/logo_iec.png" alt="IEC Logo" class="button-icon-png">
-                <span>IEC</span>
+                <span>Standar IEC</span>
             </a>
             <a href="fk_icea.html" class="button button-icea">
                 <img src="..//icon/logo_icea.png" alt="ICEA Logo" class="button-icon-png">
-                <span>ICEA</span>
+                <span>Standar ICEA</span>
             </a>
             <a href="fk_spln.html" class="button button-spln">
                 <img src="..//icon/logo_spln.png" alt="SPLN Logo" class="button-icon-png">
-                <span>SPLN</span>
+                <span>Standar SPLN</span>
             </a>
             <a href="fk_as.html" class="button button-asnzs">
                 <img src="..//icon/logo_as.png" alt="AS/NZS Logo" class="button-icon-png">
-                <span>AS/NZS</span>
+                <span>Standar AS/NZS</span>
             </a>
         </div>
         <div class="bottom-actions">
