--- a/lainnya/hitung_panjang_kabel.html
+++ b/lainnya/hitung_panjang_kabel.html
@@ -328,7 +328,7 @@
         </form>
         <div id="hasil" class="mt-4"></div> </div>
     <footer>
-        Dibuat dengan ❤️ oleh Williyanto Adi &copy; 2025
+        Dibuat oleh Williyanto Adi 2025
     </footer>
     <script>
         function toggleInputDrum() {
