--- a/lainnya/konverter_hambatan.html
+++ b/lainnya/konverter_hambatan.html
@@ -331,7 +331,8 @@ body.dark-mode .leaf-btn:hover {
                 <option value="ohm">Ω</option>
                 <option value="mili">mΩ</option>
                 <option value="mikro">µΩ</option>
-                <option value="nano">nΩ</                <option value="piko">pΩ</option>
+                <option value="nano">nΩ</option>
+                <option value="piko">pΩ</option>
               </select>
             </div>
             <div class="d-flex flex-column align-items-center" style="justify-content:center;">
