--- a/lainnya/konverter_hambatan.html
+++ b/lainnya/konverter_hambatan.html
@@ -6,10 +6,13 @@
   <title>Konverter Hambatan</title>
   <link rel="icon" type="image/png" href="..//icon/danger_hv.png" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
 body {
   background: linear-gradient(145deg, #f0f0f0, #ffffff);
-  font-family: 'Segoe UI', sans-serif;
+  font-family: 'Roboto', sans-serif; /* Perubahan di sini */
   transition: background 0.3s, color 0.3s;
   color: #222;
 }
@@ -232,14 +235,13 @@ body.dark-mode .leaf-btn:hover {
 }
 
 /* --- MOBILE OPTIMIZATION --- */
-@media (max-width: 576px) { /* Ini adalah breakpoint untuk perangkat mobile */
+@media (max-width: 576px) { /* Adjust breakpoint as needed for mobile */
   .card-box {
     margin-left: auto;
     margin-right: auto;
     max-width: 95%; /* Sedikit lebih lebar untuk memberi ruang pada kolom */
     padding: 15px; /* Mengurangi padding untuk layar sangat kecil */
   }
-
   /* Untuk kelompok "Nilai Hambatan" dan "Panjang" */
   .d-flex.flex-row .flex-4 { /* Targetkan div dengan flex:4 */
     flex: 1 1 48% !important; /* Biarkan mereka fleksibel tetapi dengan basis lebar sekitar setengah */
@@ -300,7 +302,8 @@ body.dark-mode .leaf-btn:hover {
       <div class="d-flex flex-row align-items-end gap-2">
         <div style="flex:100%;">
           <div class="d-flex flex-row align-items-end gap-2">
-            <div style="flex:4;" class="flex-4"> <label class="form-label">Nilai Hambatan</label>
+            <div style="flex:4;" class="flex-4">
+              <label class="form-label">Nilai Hambatan</label>
               <input
                 type="number"
                 class="form-control"
@@ -310,7 +313,8 @@ body.dark-mode .leaf-btn:hover {
                 autocomplete="off"
               >
             </div>
-            <div style="flex:4;" class="flex-4"> <label class="form-label">Panjang</label>
+            <div style="flex:4;" class="flex-4">
+              <label class="form-label">Panjang</label>
               <input
                 type="number"
                 class="form-control"
@@ -322,7 +326,8 @@ body.dark-mode .leaf-btn:hover {
             </div>
           </div>
           <div class="mt-2 d-flex flex-row align-items-end gap-2">
-            <div style="flex:1;" class="flex-1"> <label class="form-label mb-1" for="selectSatuanMain">Satuan</label>
+            <div style="flex:1;" class="flex-1">
+              <label class="form-label mb-1" for="selectSatuanMain">Satuan</label>
               <select class="form-select" id="selectSatuanMain">
                 <option value="tera">TΩ</option>
                 <option value="giga">GΩ</option>
@@ -338,7 +343,8 @@ body.dark-mode .leaf-btn:hover {
             <div class="d-flex flex-column align-items-center" style="justify-content:center;">
               <button type="button" class="leaf-btn" id="btnSwitch" title="Tukar satuan input dan output">⇆</button>
             </div>
-            <div style="flex:1;" class="flex-1"> <label class="form-label mb-1" for="selectSatuanOutput" style="visibility:hidden;">Satuan Output</label>
+            <div style="flex:1;" class="flex-1">
+              <label class="form-label mb-1" for="selectSatuanOutput" style="visibility:hidden;">Satuan Output</label>
               <select class="form-select" id="selectSatuanOutput">
                 <option value="tera">TΩ</option>
                 <option value="giga">GΩ</option>
@@ -497,7 +503,7 @@ body.dark-mode .leaf-btn:hover {
         resultInput.value = `${hasil.toLocaleString('id-ID', {maximumFractionDigits: 12})} ${satuanTextFull(satuanTujuan)}`;
       });
       // Hasil MΩ·km
-      let hasilMOhmKm = (isNaN(panjang) || panjang <= 0)
+      let hasilMOhmKm = (isNaN(panjang) || panjang > 0)
         ? 0
         : getMOhmKm(val, satuanAsal, panjang);
       // Info: label hitam, hasil hijau
