--- a/lainnya/konverter_hambatan.html
+++ b/lainnya/konverter_hambatan.html
@@ -372,7 +372,7 @@ body.dark-mode .leaf-btn:hover {
       >
     </div>
     <div class="info-text" id="infoText">
-      Silakan masukkan nilai hambatan, panjang, dan pilih satuan asal.
+      Silahkan masukkan nilai hambatan, panjang, dan pilih satuan asal.
       <div class="info-extra" id="infoExtra"></div>
     </div>
     <div class="text-center mt-4">
