--- a/lainnya/konverter_hambatan.html
+++ b/lainnya/konverter_hambatan.html
@@ -492,7 +492,7 @@ body.dark-mode .leaf-btn:hover {
       if (isNaN(val) || val < 0) {
         animUpdate(resultInput, () => { resultInput.value = "0"; });
         animUpdate(infoText, () => {
-          infoText.innerHTML = `Silakan masukkan nilai hambatan, panjang, dan pilih satuan asal.<div class="info-extra" id="infoExtra"></div>`;
+          infoText.innerHTML = `Silahkan masukkan nilai hambatan, panjang, dan pilih satuan asal.<div class="info-extra" id="infoExtra"></div>`;
         });
         return;
       }
