--- a/lainnya/konverter_panjang.html
+++ b/lainnya/konverter_panjang.html
@@ -320,7 +320,7 @@ body.dark-mode h4.title {
       >
     </div>
     <div class="info-text-length" id="infoTextLength">
-      Silakan masukkan nilai panjang dan pilih satuan asal.
+      silahkan masukkan nilai panjang dan pilih satuan asal.
       <div class="info-extra" id="infoExtraLength"></div>
     </div>
     <div class="text-center mt-4">
@@ -422,7 +422,7 @@ body.dark-mode h4.title {
       if (isNaN(val) || val < 0) {
         animUpdate(resultInputLength, () => { resultInputLength.value = "0"; });
         animUpdate(infoTextLength, () => {
-          infoTextLength.innerHTML = `Silakan masukkan nilai panjang dan pilih satuan asal.<div class="info-extra" id="infoExtraLength"></div>`;
+          infoTextLength.innerHTML = `silahkan masukkan nilai panjang dan pilih satuan asal.<div class="info-extra" id="infoExtraLength"></div>`;
         });
         return;
       }
